; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo.c_vo_set_queue_params.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo.c_vo_set_queue_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_internal* }
%struct.vo_internal = type { i32, i32, i32 }

@VO_MAX_REQ_FRAMES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vo_set_queue_params(%struct.vo* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.vo*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.vo_internal*, align 8
  store %struct.vo* %0, %struct.vo** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.vo*, %struct.vo** %4, align 8
  %9 = getelementptr inbounds %struct.vo, %struct.vo* %8, i32 0, i32 0
  %10 = load %struct.vo_internal*, %struct.vo_internal** %9, align 8
  store %struct.vo_internal* %10, %struct.vo_internal** %7, align 8
  %11 = load %struct.vo_internal*, %struct.vo_internal** %7, align 8
  %12 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %11, i32 0, i32 0
  %13 = call i32 @pthread_mutex_lock(i32* %12)
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.vo_internal*, %struct.vo_internal** %7, align 8
  %16 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %15, i32 0, i32 2
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @VO_MAX_REQ_FRAMES, align 4
  %19 = call i32 @MPCLAMP(i32 %17, i32 1, i32 %18)
  %20 = load %struct.vo_internal*, %struct.vo_internal** %7, align 8
  %21 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load %struct.vo_internal*, %struct.vo_internal** %7, align 8
  %23 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %22, i32 0, i32 0
  %24 = call i32 @pthread_mutex_unlock(i32* %23)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @MPCLAMP(i32, i32, i32) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
